deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: fma
  name: fma
spec:
  type: LoadBalancer
  selector:
    app: fma
  ports:
    - {name: smtp, port: 25, targetPort: smtp}
    - {name: submission, port: 587, targetPort: submission}
    - {name: smtps, port: 465, targetPort: smtps}
    - {name: pop3, port: 110, targetPort: pop3}
    - {name: pop3s, port: 995, targetPort: pop3s}
    - {name: imap, port: 143, targetPort: imap}
    - {name: imaps, port: 993, targetPort: imaps}
---
apiVersion: v1
kind: Service
metadata:
  namespace: fma
  name: fma-http
spec:
  selector:
    app: fma
  ports:
    - {name: http, port: 8080, targetPort: http}
