deploy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: fma
  name: fma-jmap
spec:
  tls:
    - hosts: [mail.example.com]
      secretName: fma-tls
  rules:
    - host: mail.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fma-http
                port:
                  number: 8080
